--- a/stories/assets/scss/_mixins.scss
+++ b/stories/assets/scss/_mixins.scss
@@ -296,14 +296,17 @@
 }
 
 %left-to-right {
+  @include transform(translateX(-100px));
+
   opacity: 0;
+  transition: transform 1.2s cubic-bezier(0.34, 0.41, 0.03, 1), opacity 1.2s cubic-bezier(0.34, 0.41, 0.03, 1);
   visibility: hidden;
-  transform: translateX(-100px);
-  transition: transform 1.2s cubic-bezier(.34,.41,.03,1),opacity 1.2s cubic-bezier(.34,.41,.03,1);
 }
 
 %in__viewport {
+  @include transform(translateX(0));
+
   opacity: 1;
-  visibility: visible;
   transform: translateX(0);
+  visibility: visible;
 }
